# lit

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  marketplace.json
.claude-plugin/: .mcp.json  plugin.json
.github/workflows/: release.yml
docs/: CLIO.md  DESIGN.md  WORKFLOWS.md
etc/: worldcat-plan.md
etc/lit/cache/: arxiv_0af18173bd9c497c  (+49 more)
scripts/: download-binaries.sh
src/: bibtex.rs  citekey.rs  config.rs  db.rs  detect.rs  format.rs  http.rs  lib.rs  main.rs  mcp.rs
src/api/: arxiv.rs  clio.rs  crossref.rs  dblp.rs  mod.rs  openalex.rs  openlibrary.rs  philpapers.rs  s2_dump.rs  semantic_scholar.rs  unpaywall.rs
src/cmd/: add.rs  check.rs  cites.rs  clean.rs  clio.rs  download.rs  misc.rs  mod.rs  open.rs  path.rs  read.rs  refs.rs  search.rs  source.rs  verify.rs
test/: lit.bats  test.sh
test/cache/: arxiv_1511.05952  arxiv_1806.07857  arxiv_2102.12425  arxiv_98f6863dcac96629  arxiv_b2a462a972bbaa37  book_009f6982ebe44eaf  book_32bbfcff4a6ab4f8  book_32f562d9fe71c40a  book_366673395a287ab2  book_79f41902441b840b  book_93ffb1e4378c4ed3  book_c846df7012f69476  book_e60f63745e22a33b  book_edfe5d8e29ec55dd  book_ee96829e4f6182cf  cites_0af18173bd9c497c  cites_9a879d5f2c2e815e  cr_e74ee876be0a0006  dblp_2c17c832a52718a3  dblp_566e5bf4aecf5206  doi_36cb08a6274d1c9b  doi_6d267e1b287b0d24  isbn_9780262039246  isbn_9781596913875  oa_2c17c832a52718a3  oa_40b78511bdfdba2e  oa_627d38ab31da1435  oa_682b8eb44a94ba65  oa_84778e68997ff727  oa_8635e0243e2a1e10  oa_e74ee876be0a0006  oa_ec0006defdf062b6  oa_search_009f6982ebe44eaf  oa_search_32f562d9fe71c40a  oa_search_366673395a287ab2  oa_search_79f41902441b840b  oa_search_c846df7012f69476  oa_search_e60f63745e22a33b  oa_search_ee96829e4f6182cf  refs_7908d4d635c43936  (+11 more)
