[package]
name = "lit"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI tool for searching, downloading, and managing academic papers"
license = "MIT"
repository = "https://github.com/kl2792/lit"
authors = ["Kai-Zhan Lee"]
readme = "README.md"
keywords = ["academic", "papers", "bibtex", "arxiv", "citations"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "lit"
path = "src/main.rs"

[[bin]]
name = "lit-mcp"
path = "src/bin/lit-mcp.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process"] }
quick-xml = "0.37"
md-5 = "0.10"
regex = "1"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
